Added full Java 11 support: Fixed illegal access issues, updated/removed deprecated stuff, updated dependencies, removed JAXWS stuff.