@@ -64,7 +64,7 @@ public class IWrapperInfo {
                     Element root = doc.createElement("iwrapper");
                     root.setAttribute("class", iwrpClass.getName());
                     doc.appendChild(root);
-                    IWrapper iw = iwrpClass.newInstance();
+                    IWrapper iw = iwrpClass.getDeclaredConstructor().newInstance();
                     iw.init("dummy");
                     IWrapperParamDefinition[] defs = iw.gimmeAllParamDefinitions();
                     for (IWrapperParamDefinition def : defs) {
