@@ -64,7 +64,7 @@ public class XsltProvider {
             if(namePoolImpl != null) {
                 try {
                     Class<?> clazz = Class.forName(namePoolImpl);
-                    NamePool namePool = (NamePool)clazz.newInstance();
+                    NamePool namePool = (NamePool)clazz.getDeclaredConstructor().newInstance();
                     namePool.loadStandardNames();
                     Field field = NamePool.class.getDeclaredField("defaultNamePool");
                     field.setAccessible(true);
@@ -88,19 +88,19 @@ public class XsltProvider {
         if(saxon1Available) {
             try {
                 Class<? extends XmlSupport> clazz=Class.forName(XML_SAXON1).asSubclass(XmlSupport.class);
-                xmlSupport.put(XsltVersion.XSLT1,clazz.newInstance());
+                xmlSupport.put(XsltVersion.XSLT1,clazz.getDeclaredConstructor().newInstance());
             } catch(Exception x) {
                 LOG.error("Can't initialize XmlSupport: "+XML_SAXON1,x);
             }
             try {
                 Class<? extends XPathSupport> clazz=Class.forName(XPATH_SAXON1).asSubclass(XPathSupport.class);
-                xpathSupport.put(XsltVersion.XSLT1,clazz.newInstance());
+                xpathSupport.put(XsltVersion.XSLT1,clazz.getDeclaredConstructor().newInstance());
             } catch(Exception x) {
                 LOG.error("Can't initialize XPathSupport: "+XPATH_SAXON1,x);
             }
             try {
                 Class<? extends XsltSupport> clazz=Class.forName(XSLT_SAXON1).asSubclass(XsltSupport.class);
-                xsltSupport.put(XsltVersion.XSLT1,clazz.newInstance());
+                xsltSupport.put(XsltVersion.XSLT1,clazz.getDeclaredConstructor().newInstance());
             } catch(Exception x) {
                 LOG.error("Can't initialize XsltSupport: "+XSLT_SAXON1,x);
             }
@@ -108,19 +108,19 @@ public class XsltProvider {
         if(saxon2Available) {
             try {
                 Class<? extends XmlSupport> clazz=Class.forName(XML_SAXON2).asSubclass(XmlSupport.class);
-                xmlSupport.put(XsltVersion.XSLT2,clazz.newInstance());
+                xmlSupport.put(XsltVersion.XSLT2,clazz.getDeclaredConstructor().newInstance());
             } catch(Exception x) {
                 LOG.error("Can't initialize XmlSupport: "+XML_SAXON2,x);
             }
             try {
                 Class<? extends XPathSupport> clazz=Class.forName(XPATH_SAXON2).asSubclass(XPathSupport.class);
-                xpathSupport.put(XsltVersion.XSLT2,clazz.newInstance());
+                xpathSupport.put(XsltVersion.XSLT2,clazz.getDeclaredConstructor().newInstance());
             } catch(Exception x) {
                 LOG.error("Can't initialize XPathSupport: "+XPATH_SAXON2,x);
             }
             try {
                 Class<? extends XsltSupport> clazz=Class.forName(XSLT_SAXON2).asSubclass(XsltSupport.class);
-                xsltSupport.put(XsltVersion.XSLT2,clazz.newInstance());
+                xsltSupport.put(XsltVersion.XSLT2,clazz.getDeclaredConstructor().newInstance());
             } catch(Exception x) {
                 LOG.error("Can't initialize XsltSupport: "+XSLT_SAXON2,x);
             }
