@@ -15,7 +15,6 @@
  * along with Pustefix; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-
 package org.pustefixframework.webservices.config;
 
 import java.io.CharArrayWriter;
@@ -47,9 +46,7 @@ import de.schlund.pfixxml.resources.FileResource;
 import de.schlund.pfixxml.resources.Resource;
 import de.schlund.pfixxml.resources.ResourceUtil;
 
-/**
- * @author mleidig@schlund.de
- */
+
 public class ConfigurationReader extends DefaultHandler {
 
     Resource configFile;
@@ -145,11 +142,6 @@ public class ConfigurationReader extends DefaultHandler {
             } else if(localName.equals("protocol")) {
                 String proto=getStringAttribute(atts,"type",Constants.PROTOCOL_TYPES);
                 if(proto!=null) globSrvConf.setProtocolType(proto);
-            } else if(localName.equals("encoding")) {
-                String encStyle=getStringAttribute(atts,"style",Constants.ENCODING_STYLES);
-                if(encStyle!=null) globSrvConf.setEncodingStyle(encStyle);
-                String encUse=getStringAttribute(atts,"use",Constants.ENCODING_USES);
-                if(encUse!=null) globSrvConf.setEncodingUse(encUse);
             } else if(localName.equals("json")) {
                 Boolean hinting=getBooleanAttribute(atts,"classhinting");
                 if(hinting!=null) globSrvConf.setJSONClassHinting(hinting);
@@ -202,11 +194,6 @@ public class ConfigurationReader extends DefaultHandler {
             } else if(localName.equals("stubgeneration")) {
                  String jsNamespace=getStringAttribute(atts,"jsnamespace");
                  if(jsNamespace!=null) srvConf.setStubJSNamespace(jsNamespace);
-            } else if(localName.equals("encoding")) {
-                String encStyle=getStringAttribute(atts,"style",Constants.ENCODING_STYLES);
-                if(encStyle!=null) srvConf.setEncodingStyle(encStyle);
-                String encUse=getStringAttribute(atts,"use",Constants.ENCODING_USES);
-                if(encUse!=null) srvConf.setEncodingUse(encUse);
             } else if(localName.equals("json")) {
                 Boolean hinting=getBooleanAttribute(atts,"classhinting");
                 if(hinting!=null) srvConf.setJSONClassHinting(hinting);
@@ -381,7 +368,7 @@ public class ConfigurationReader extends DefaultHandler {
         }
         try {
             Class<?> clazz=Class.forName(val);
-            Object obj=clazz.newInstance();
+            Object obj=clazz.getDeclaredConstructor().newInstance();
             if(!superClazz.isInstance(obj)) throw new ClassCastException("Class '"+val+"' can't be casted to '"+superClazz.getName()+"'.");
             return obj;
         } catch(Exception x) {
