@@ -15,7 +15,6 @@
  * along with Pustefix; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-
 package org.pustefixframework.webservices.spring;
 
 import java.io.IOException;
@@ -54,8 +53,6 @@ import de.schlund.pfixxml.resources.ResourceUtil;
 
 /**
  * Webservice HTTP endpoint handling service requests (along with admin/tool stuff).
- * 
- * @author mleidig
  */
 public class WebServiceHttpRequestHandler implements UriProvidingHttpRequestHandler, InitializingBean, ServletContextAware, ApplicationContextAware {
 
@@ -84,7 +81,7 @@ public class WebServiceHttpRequestHandler implements UriProvidingHttpRequestHand
         else if(protocolType.equals(Constants.PROTOCOL_TYPE_JSONWS)) procClass = PROCESSOR_IMPL_JSONWS;
         try {
             Class<?> clazz = Class.forName(procClass);
-            ServiceProcessor proc = (ServiceProcessor)clazz.newInstance();
+            ServiceProcessor proc = (ServiceProcessor)clazz.getDeclaredConstructor().newInstance();
             return proc;
         } catch(ClassNotFoundException x) {
             if(LOG.isDebugEnabled()) LOG.debug("ServiceProcessor '"+procClass+"' for protocol '"+
@@ -113,7 +110,7 @@ public class WebServiceHttpRequestHandler implements UriProvidingHttpRequestHand
                 runtime.addServiceProcessor(Constants.PROTOCOL_TYPE_SOAP, sp);
                 try {
                     Class<?> clazz = Class.forName(GENERATOR_IMPL_JAXWS);
-                    ServiceStubGenerator gen = (ServiceStubGenerator)clazz.newInstance();
+                    ServiceStubGenerator gen = (ServiceStubGenerator)clazz.getDeclaredConstructor().newInstance();
                     runtime.addServiceStubGenerator(Constants.PROTOCOL_TYPE_SOAP, gen);
                     LOG.info("Registered ServiceProcessor for "+Constants.PROTOCOL_TYPE_SOAP);
                 } catch(Exception x) {
@@ -128,7 +125,7 @@ public class WebServiceHttpRequestHandler implements UriProvidingHttpRequestHand
                 runtime.addServiceProcessor(Constants.PROTOCOL_TYPE_JSONWS, sp);
                 try {
                     Class<?> clazz = Class.forName(GENERATOR_IMPL_JSONWS);
-                    ServiceStubGenerator gen = (ServiceStubGenerator)clazz.newInstance();
+                    ServiceStubGenerator gen = (ServiceStubGenerator)clazz.getDeclaredConstructor().newInstance();
                     runtime.addServiceStubGenerator(Constants.PROTOCOL_TYPE_JSONWS, gen);
                     LOG.info("Registered ServiceProcessor for "+Constants.PROTOCOL_TYPE_JSONWS);
                 } catch(Exception x) {
