@@ -15,7 +15,6 @@
  * along with Pustefix; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  */
-
 package org.pustefixframework.webservices.jsonws.deserializers;
 
 import java.lang.reflect.Type;
@@ -25,9 +24,6 @@ import org.pustefixframework.webservices.jsonws.DeserializationException;
 import org.pustefixframework.webservices.jsonws.Deserializer;
 
 
-/**
- * @author mleidig@schlund.de
- */
 public class NumberDeserializer extends Deserializer {
 
     @Override
@@ -47,22 +43,22 @@ public class NumberDeserializer extends Deserializer {
         if(jsonValue instanceof Number) {
             if(targetClass==int.class||targetClass==Integer.class) {
                 if(jsonValue.getClass()==Integer.class) return jsonValue;
-                else return new Integer(((Number)jsonValue).intValue());
+                else return Integer.valueOf(((Number)jsonValue).intValue());
             } else if(targetClass==float.class||targetClass==Float.class) {
                 if(jsonValue.getClass()==Float.class) return jsonValue;
-                else return new Float(((Number)jsonValue).floatValue());
+                else return Float.valueOf(((Number)jsonValue).floatValue());
             } else if(targetClass==long.class||targetClass==Long.class) {
                 if(jsonValue.getClass()==Long.class) return jsonValue;
-                else return new Long(((Number)jsonValue).longValue());
+                else return Long.valueOf(((Number)jsonValue).longValue());
             } else if(targetClass==double.class||targetClass==Double.class) {
                 if(jsonValue.getClass()==Double.class) return jsonValue;
-                else return new Double(((Number)jsonValue).doubleValue());
+                else return Double.valueOf(((Number)jsonValue).doubleValue());
             } else if(targetClass==byte.class||targetClass==Byte.class) {
                 if(jsonValue.getClass()==Byte.class) return jsonValue;
-                else return new Byte(((Number)jsonValue).byteValue());
+                else return Byte.valueOf(((Number)jsonValue).byteValue());
             } else if(targetClass==short.class||targetClass==Short.class) {
                 if(jsonValue.getClass()==Short.class) return jsonValue;
-                else return new Short(((Number)jsonValue).shortValue());
+                else return Short.valueOf(((Number)jsonValue).shortValue());
             }
             return (Number)jsonValue;
         } else throw new DeserializationException("Wrong type: "+jsonValue.getClass().getName());
